--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="css/main.css">
 
+<script src="js/lib/jquery.min.js"></script>
+<script src="js/lib/bootstrap.min.js"></script>
+<script src="js/lib/tone.js"></script>
+<script src="js/app.js"></script>
+	
 </head>
 
 <body>
@@ -45,9 +50,6 @@
 	</div>
 </div>
 
-<script src="js/lib/jquery.min.js"></script>
-<script src="js/lib/bootstrap.min.js"></script>
-<script src="js/app.js"></script>
 
 <script>
 	
