--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <script src="js/lib/jquery.min.js"></script>
 <script src="js/lib/bootstrap.min.js"></script>
-<script src="js/lib/tone.js"></script>
+<script src="js/lib/Tone.js"></script>
 <script src="js/app.js"></script>
 	
 </head>
