--- a/index.html
+++ b/index.html
@@ -3,19 +3,17 @@
 
 <meta charset="UTF-8">
 
+<!-- Styles -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="css/main.css">
-
-<script src="js/lib/jquery.min.js"></script>
-<script src="js/lib/bootstrap.min.js"></script>
-<script src="js/lib/Tone.js"></script>
-<script src="js/app.js"></script>
 	
+<!-- Font Awesome -->
+<script src="https://use.fontawesome.com/cc273113a5.js"></script>
 </head>
 
 <body>
 
-<div id="wrap" style=";height:100vh">
+<div id="main">
 	<div class="container-fluid">
 		<div class="row justify-content-center pt-3">
 			<div class="col-md-10">
@@ -25,25 +23,31 @@
 					</div>
 					<div class="card-body">
 						<div class="row">
+							<!-- Input Sidebar -->
 							<div class="col-md-4">
-								<form action="">
-									<div class="d-flex align-items-center mb-3" style="height:75px;padding:10px;background-color:#FFF68D;border-radius:4px">
+								<div id="loading">
+									<i class="fa fa-spinner fa-spin fa-fw fa-5x" aria-hidden></i>
+								</div>
+								<div class="hidden" id="main_input">
+									<div class="d-flex align-items-center mb-3 latex-display">
 										<span class="mr-1 d-flex align-items-center">$$\mathrm{f}\left( x\right)$$ =</span>
 										<span id="latex">$$0$$</span>
 									</div>
 									<div class="d-flex mb-3">
 										<span class="mr-1 d-flex align-items-center" id="function_label">$$\mathrm{f}\left( x\right)$$ =</span>
-										<input type="text" id="function_input" class="form-control" style="width:auto;flex:1"/></input>
+										<div class="flex-1"><input type="text" id="function_input" class="form-control h-100" /></input></div>
 									</div>
 									<div class="d-flex">
 										<span class="mr-1">BPM:</span>
 										<input type="number" id="bpm_input" class="form-control w-50 mr-3">
-										<input type="button" id="submit_btn" class="btn btn-primary" value="Plot" style="flex:1">
+										<input type="button" id="submit_btn" class="btn btn-primary flex-1" value="Plot">
 									</div>
+									<hr>
 									<div id="history">
+										<strong>History</strong>
 										
 									</div>
-								</form>
+								</div>
 							</div>
 							<div class="col-md-8">
 								<div id="chart"><img src="img/sample_chart.jpg" alt="" class="img-fluid"/></div>
@@ -56,34 +60,13 @@
 	</div>
 </div>
 
+<!-- JS -->
 <script src="js/lib/jquery.min.js"></script>
 <script src="js/lib/bootstrap.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/mathjs/3.20.1/math.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/mathjax/2.3/MathJax.js?config=TeX-AMS-MML_HTMLorMML.js"></script>
+<script src="js/lib/Tone.js"></script>
 <script src="js/app.js"></script>
-
-<script>
-	var expr = document.getElementById('function_input'),
-      pretty = document.getElementById('latex'),
-      result = document.getElementById('history');
-
-	expr.oninput = function () {
-	    var node = null;
-
-	    try {
-			// parse the expression
-			node = (expr.value == '') ? math.parse('0') : math.parse(expr.value);
-
-			// export the expression to LaTeX
-			var latex = node ? node.toTex({parenthesis: 'keep', implicit: 'hide'}) : '';
-
-			// display and re-render the expression
-			var elem = MathJax.Hub.getAllJax('pretty')[0];
-			MathJax.Hub.Queue(['Text', elem, latex]);
-		}
-		catch (err) {}
-	};
-</script>
 
 </body>
 </html>
