--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
 
 <!-- Styles -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link href="nouislider.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="css/main.css">
+<link rel="stylesheet" type="text/css" href="css/nouislider.min.css">
+
+<!-- MathBox -->
+<script src="js/lib/mathbox-bundle.js"></script>
+<link rel="stylesheet" href="css/lib/mathbox.css">
+<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	
 <!-- Font Awesome -->
 <script src="https://use.fontawesome.com/cc273113a5.js"></script>
@@ -35,7 +42,7 @@
 									</div>
 									<div class="d-flex mb-3">
 										<span class="mr-1 d-flex align-items-center" id="function_label">$$\mathrm{f}\left( x\right)$$ =</span>
-										<div class="flex-1"><input type="text" id="function_input" class="form-control h-100" /></input></div>
+										<div class="flex-1 h-100"><input type="text" id="function_input" class="form-control h-100" /></input></div>
 									</div>
 									<div class="d-flex">
 										<span class="mr-1">BPM:</span>
@@ -50,7 +57,10 @@
 								</div>
 							</div>
 							<div class="col-md-8">
-								<div id="chart"><img src="img/sample_chart.jpg" alt="" class="img-fluid"/></div>
+								<div class="chart-container"></div>
+								<div class="row">
+									<div id="audio_slider"></div>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -62,11 +72,14 @@
 
 <!-- JS -->
 <script src="js/lib/jquery.min.js"></script>
+<script src="js/lib/nouislider.min.js"></script>
 <script src="js/lib/bootstrap.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/mathjs/3.20.1/math.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/mathjax/2.3/MathJax.js?config=TeX-AMS-MML_HTMLorMML.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script> -->
 <script src="js/lib/Tone.js"></script>
 <script src="js/app.js"></script>
+
 
 </body>
 </html>
