--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="col-md-10">
 				<div class="card">
 					<div class="card-header">
-						<h4>Music in Numbers</h4>
+						<h4>Mathemusician</h4>
 					</div>
 					<div class="card-body">
 						<div class="row">
@@ -42,11 +42,11 @@
 									</div>
 									<div class="d-flex mb-3">
 										<span class="mr-1 d-flex align-items-center" id="function_label">$$\mathrm{f}\left( x\right)$$ =</span>
-										<div class="flex-1 h-100"><input type="text" id="function_input" class="form-control h-100" /></input></div>
+										<div id="input_box" class="flex-1"><input type="text" id="function_input" class="form-control h-100" /></input></div>
 									</div>
 									<div class="d-flex">
 										<span class="mr-1">BPM:</span>
-										<input type="number" id="bpm_input" class="form-control w-50 mr-3">
+										<input type="number" id="bpm_input" class="form-control w-50 mr-3"  value=120 min=1>
 										<input type="button" id="submit_btn" class="btn btn-primary flex-1" value="Plot">
 									</div>
 									<hr>
@@ -74,9 +74,8 @@
 <script src="js/lib/jquery.min.js"></script>
 <script src="js/lib/nouislider.min.js"></script>
 <script src="js/lib/bootstrap.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/mathjs/3.20.1/math.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/mathjax/2.3/MathJax.js?config=TeX-AMS-MML_HTMLorMML.js"></script>
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script> -->
+<script src="js/lib/math.min.js"></script>
+<script src="js/lib/mathjax.js"></script>
 <script src="js/lib/Tone.js"></script>
 <script src="js/app.js"></script>
 
