Reset of LaTex formatting

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 
 <!-- Styles -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link href="nouislider.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="css/main.css">
 <link rel="stylesheet" type="text/css" href="css/nouislider.min.css">
 
@@ -72,10 +71,9 @@
 
 <!-- JS -->
 <script src="js/lib/jquery.min.js"></script>
-<script src="js/lib/nouislider.min.js"></script>
 <script src="js/lib/bootstrap.min.js"></script>
-<script src="js/lib/math.min.js"></script>
-<script src="js/lib/mathjax.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/mathjs/3.20.1/math.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/mathjax/2.3/MathJax.js?config=TeX-AMS-MML_HTMLorMML.js"></script>
 <script src="js/lib/Tone.js"></script>
 <script src="js/app.js"></script>
 
