--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 <!-- JS -->
 <script src="js/lib/jquery.min.js"></script>
 <script src="js/lib/bootstrap.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/mathjs/3.20.1/math.js"></script>
+<script src="js/lib/math.js" defer></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/mathjax/2.3/MathJax.js?config=TeX-AMS-MML_HTMLorMML.js"></script>
 <script src="js/lib/Tone.js"></script>
-<script src="js/app.js"></script>
+<script src="js/app.js" defer></script>
 
 
 </body>
