--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" type="text/css" href="css/nouislider.min.css">
 
 <!-- MathBox -->
+<script src="http://cdnjs.cloudflare.com/ajax/libs/mathjs/3.20.1/math.min.js"></script>
 <script src="js/lib/mathbox-bundle.js"></script>
 <link rel="stylesheet" href="css/lib/mathbox.css">
 <meta name="viewport" content="initial-scale=1, maximum-scale=1">
@@ -81,10 +82,9 @@
 <!-- JS -->
 <script src="js/lib/jquery.min.js"></script>
 <script src="js/lib/bootstrap.min.js"></script>
-<script src="js/lib/math.js" defer></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/mathjax/2.3/MathJax.js?config=TeX-AMS-MML_HTMLorMML.js"></script>
 <script src="js/lib/Tone.js"></script>
-<script src="js/app.js" defer></script>
+<script src="js/app.js"></script>
 
 
 </body>
