Added ability to change hertz

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 								<div class="hidden" id="main_input">
 									<strong class="mb-2">Playback Info</strong>
 									<div class="d-flex justify-content-between">
-										<span class="mr-1 align-self-center">BPM:</span>
-										<input type="number" id="bpm_input" class="form-control w-50 mr-3"  value=120 min=1>
+										<span class="mr-1 align-self-center">Hz:</span>
+										<input type="number" id="frequency_input" class="form-control w-50 mr-3" value="261.3" min="20">
 										<button class="btn btn-primary flex-1" id="play_btn">
 											<i class="fa fa-play" aria-hidden="true"></i></button>
 										<div class="justify-content-between" id="active_playback_ctrls">
